[package]
name = "lark-oapi"
version = "0.1.0"
edition = "2021"
description = "OpenAPI SDK for lark"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.31"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.7"
ring = "0.16.20"
serde = { features = ["derive"] }
serde_json = "1.0.96"
serde_json_borrow = "0.1.4"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls-webpki-roots",
    "blocking",
] }
prost-reflect = { version = "0.12", features = ["serde"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
